--- a/src/HomePage.module.css
+++ b/src/HomePage.module.css
@@ -1,40 +1,64 @@
+.homePageH1 {
+  color: #171a1d;
+  font-size: 3vw;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  padding: 2% 0% 2% 3%;
+  background-color: #E4E4E4A8;
+}
+
+.homePageH2 {
+  color: #171a1d;
+  font-size: 1.5vw;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
 .homePageGridContainer {
-  /* margin: 0;
   padding: 0;
-  height: 100%; */
   display: grid;
   grid-template-columns: 25vw 1fr;
-  /* grid-auto-columns: minmax(minimum, maximum); */
 }
 
 .homePageNavContainer {
-  /* height: 100vh; */
+  height: 100%;
   display: flex;
   flex-direction: column;
-  /* text-align: center; */
+  justify-content: center;
   background-color: #ec242a;
 }
 
-.navLink {
+.homePageNavColumn {
+ width: 80%;
+}
+
+.homePageNavButton {
   background-color: white;
+  margin-top: 5%;
   margin-bottom: 15%;
   border-radius: 10px;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  justify-content: center;
   border: none;
   font-size: 1.5vw;
   font-weight: bold;
   color: #171a1d;
   text-decoration: none;
-  padding: 2%;
-  line-height: 10vh;
   transition: 350ms;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: 'Roboto', sans-serif;
 }
 
-.navLink:hover {
-  font-size: 1.6vw;
-  font-weight: bold;
-  color: #ec242a;
+.homePageNavButton:hover {
+  color: white;
+  background-color: #E4E4E4A8;;
+  font-size: 1.55vw;
 }
-
 
 .recommendation-container {
   display: flex;
@@ -58,8 +82,6 @@
 
 .getMovieButton:hover {
   background-color: #ec242a;
-  font-weight: bold;
-  font-size: 1.3vw;
   color: white;
   cursor: pointer;
 }
@@ -95,73 +117,25 @@
   cursor: pointer;
 }
 
-/* h1 {
-  color: #171a1d;
-  font-size: 3vw;
-  font-weight: bold;
-  font-family: 'Roboto', sans-serif;
-  padding: 2% 0% 2% 3%;
-  margin-bottom: 2%;
-  background-color: #E4E4E4A8;
+.homePageCarousel {
+  /* border: 3px solid red; */
+  /* margin-top: 1%; */
 }
 
-p {
-  margin-left: 3%;
-  color: #030303;
-  font-size: 1.25vw;
-  font-family: 'Roboto', sans-serif;
-  font-weight: bold;
-  margin-top: 1%; 
+.homePageCarouselItem {
+  text-align: center; /* Text alignment for the caption */
+  /* border: 3px solid blue; For visual debugging, can be removed later */
+  padding-bottom: 3%;
+  
 }
 
-h2 {
-  margin-left: 3%;
-  margin-bottom: 2%; 
-  color: #171a1d;
-  font-size: 1.5vw;
-  font-weight: bold;
-  font-family: 'Roboto', sans-serif;
-  line-height: 2.5vw;
-
-}
-
-#title-of-film {
-  margin-left: 3%; 
-  margin-top: 3%;
-  color: #171a1d;
-  font-size: 1.5vw;
-  font-weight: bold;
-  font-family: 'Roboto', sans-serif;
-}
-
-#movie-content {
-  width: 50%;
-}
-
-#button-text {
-  margin-top: 4%;
-  font-size: 1.25vw;
-  font-weight: bold;
-  font-family: 'Roboto', sans-serif;
-}
-
-button:hover {
-  background-color: #ec242a;
-  font-weight: bold;
-  font-size: 1.3vw;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-button {
-  font-size: 1.25vw;
-  font-family: 'Roboto', sans-serif;
-  border-radius: 10px;
-  color: #171a1d;
-  margin: 2% 0 5% 3%;
+.homePageVideoCard {
+  /* border: 3px solid yellow; */
+  justify-content: center;
+  margin: 0 auto;
   background-color: #e4e4e4a8;
-  padding: .5% 0%;
-  width: 15%;
-  border: none;
-  transition: 350ms;
-} */
+}
+
+.homePageVideoContainer {
+  /* border: 3px solid green; */
+}
