Add ability to POST

--- a/src/HomePage.module.css
+++ b/src/HomePage.module.css
@@ -60,12 +60,12 @@
   font-size: 1.55vw;
 }
 
-.recommendation-container {
+/* .recommendation-container {
   display: flex;
   flex-direction: column;
   padding: 2% 0% 2% 3%;
   background-color: #E4E4E4A8;
-}
+} */
 
 .getMovieButton {
   font-size: 1.25vw;
