--- a/css/HomePage.module.css
+++ b/css/HomePage.module.css
@@ -1,10 +1,35 @@
+.homePageGridContainer {
+  padding: 0%;
+  margin: 0%;
+  display: grid;
+  grid-template-columns: 25vw 1fr; 
+  grid-auto-columns: minmax(minimum, maximum);
+}
+
+.HomePageRightContainer{
+  /* border:3px solid green; */
+  padding: 0%;
+  width: 100%;
+  background-color: #E4E4E4A8;
+}
+
+.homePageH1andH2 {
+  /* border: 1px solid blue; */
+  margin-bottom: 1%;
+  margin-top: 1%;
+  width: 100%;
+  box-sizing: border-box;
+}
+
 .homePageH1 {
   color: #171a1d;
   font-size: 3vw;
   font-weight: bold;
   font-family: 'Roboto', sans-serif;
-  padding: 2% 0% 2% 3%;
-  background-color: #E4E4E4A8;
+  width: 100%;
+  /* border: 3px solid yellow; */
+  margin-bottom: 1%;;
+  text-align: center;
 }
 
 .homePageH2 {
@@ -13,19 +38,16 @@
   font-weight: bold;
   font-family: 'Roboto', sans-serif;
   text-align: center;
-}
-
-.homePageGridContainer {
-  padding: 0;
-  display: grid;
-  grid-template-columns: 25vw 1fr;
+  /* border: 3px solid pink; */
+  width: 100%;
+  margin: 0%;
 }
 
 .homePageNavContainer {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: top;
   background-color: #ec242a;
 }
 
@@ -35,7 +57,8 @@
 
 .homePageNavButton {
   background-color: white;
-  margin-top: 5%;
+  text-align: center;
+  margin-top: 3%;
   margin-bottom: 15%;
   border-radius: 10px;
   padding-top: 5%;
@@ -57,16 +80,17 @@
 .homePageNavButton:hover {
   color: white;
   background-color: #E4E4E4A8;;
-  font-size: 1.55vw;
+  font-size: 1.6vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.getMovieButton {
+/* .getMovieButton {
   font-size: 1.25vw;
   font-family: 'Roboto', sans-serif;
   border-radius: 10px;
   color: #171a1d;
   margin: 2% 0 5% 3%;
-  background-color: #e4e4e4a8;
+  background-color: #c;
   padding: 0.5% 0;
   width: 15%;
   border: none;
@@ -77,7 +101,7 @@
   background-color: #ec242a;
   color: white;
   cursor: pointer;
-}
+} */
 
 .homePageVideoContainer {
   margin-left: 3%;
@@ -97,33 +121,64 @@
   margin-top: 3%;
   font-family: 'Roboto', sans-serif;
   border-radius: 10px;
-  color: #171a1d;
+  color: white;
   margin: 4% 0 2%;
-  background-color: #e4e4e4a8;
+  background-color: #ec242a;
   border: none;
   transition: 350ms;
 }
 
 .shareRecommendationButton:hover {
-  background-color: #ec242a;
-  color: white;
+  background-color: #e4e4e4a8;
+  color: black;
   cursor: pointer;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  font-size: 1.1vw; 
 }
 
 .homePageCarouselItem {
-  text-align: center; /* Text alignment for the caption */
-  /* border: 3px solid blue; For visual debugging, can be removed later */
-  padding-bottom: 3%;
-  
+  text-align: center; 
+  /* border: 3px solid blue; */
 }
 
 .homePageVideoCard {
   /* border: 3px solid yellow; */
   justify-content: center;
   margin: 0 auto;
-  background-color: #e4e4e4a8;
+}
+
+.movieAccordion {
+  border: 1px solid #ec242a;
+  border-radius: 5px;
+  margin-top: 1%;
 }
 
 .movieAccordionHeader {
   font-family: 'Roboto', sans-serif;
+}
+
+.movieCard {
+  background-color: #e4e4e4a8;
+}
+
+.AIButton {
+  margin-top: 3%;
+  font-family: 'Roboto', sans-serif;
+  border-radius: 10px;
+  color: white;
+  margin: 4% 0 2%;
+  background-color: #ec242a;
+  border: none;
+  transition: 350ms;
+}
+
+.AIButton:hover {
+  background-color: #e4e4e4a8;
+  color: black;
+  cursor: pointer;
+}
+
+.homepageErrorMsg{
+  text-align: center;
+  color: #ec242a;
 }
