--- a/css/HomePage.module.css
+++ b/css/HomePage.module.css
@@ -106,6 +106,8 @@
 .homePageVideoContainer {
   margin-left: 3%;
   margin-bottom: 2%;
+  min-width: 25%; /* Minimum width of the element */
+  max-width: 100%; /* Maximum width of the element */
 }
 
 .homePageMovieProperties {
@@ -145,6 +147,7 @@
   /* border: 3px solid yellow; */
   justify-content: center;
   margin: 0 auto;
+
 }
 
 .movieAccordion {
